Некоторые проверки, группы. В основном разбирался с оригинальными скриптами.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@
 /src/main/resources/npcpos.txt
 /target/
 /.idea/
+/src/main/resources/npcpos_Beleth_clones.txt
+/src/main/resources/npcpos_cata_necr.txt
+/src/main/resources/npcpos_events.txt
+/src/main/resources/npcpos_fantasy_island.txt
+/src/main/resources/npcpos_fortresses.txt
+/src/main/resources/npcpos_hellbound.txt
+/src/main/resources/npcpos_IoP.txt
+/src/main/resources/npcpos_kamaloka_pailaka.txt
+/src/main/resources/npcpos_premium_manager.txt
+/src/main/resources/npcpos_somthingSpawnForHB.txt
+/src/main/resources/npcpos_treasure_box.txt
