Множественные координаты шаблон работает.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /src/main/resources/npcpos_premium_manager.txt
 /src/main/resources/npcpos_somthingSpawnForHB.txt
 /src/main/resources/npcpos_treasure_box.txt
+/src/main/resources/npcpos_test.txt
