Начал работу над формированием файлов. Добавил парс и форматирование имени(для большинства). Паттерн для нового файла.

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,4 @@
 /src/main/resources/npcpos_somthingSpawnForHB.txt
 /src/main/resources/npcpos_treasure_box.txt
 /src/main/resources/npcpos_test.txt
-/src/main/resources/npcpos_DimensionalRift.txt
+/src/main/resources/npcpos_Dimensional Rift.txt
