Рефакторинг. Перекинул классы в новый пакет. И мейн класс получше назвал.

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>NPC_POS_MAIN</mainClass>
+                            <mainClass>ParserLaunch</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
