доп кейcы для xml name, чтобы меньше безымянных координат было

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /Npc_Pos_Parser/XML_Out/*
 /Npc_Pos_Parser/PTS_Scripts/*
 /Npc_Pos_Parser/lib/compile/*
+/Npc_Pos_Parser/lib/NpcPosParser.jar
+/ToDo.txt
